maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:18: error: illegal start of simple expression
			if (getIndication(i,j)==10000) setIndication(i,j, )
                                                                          ^JediEscaper:19: error: ')' expected but '}' found.
		}
                ^